- Added changes to be able to compile with JDK 11 - Most java code changes are related to new errorprone checks - Changes to EnterpriseMetadataSummary to properly override equals and hashCode - Changed new Double, deprecated in JDK 11, to Double.valueOf